Remove unnecessary testOptions